@@ -4,8 +4,7 @@ from mpl_toolkits.mplot3d import axes3d
 import matplotlib.pyplot as plt
 import numpy as np
 
-from pypet.environment import Environment
-from pypet.utils.explore import cartesian_product
+from pypet import Environment, cartesian_product
 from pypet import pypetconstants
 
 
